test/resources/typer/failing/ExtTupleError8.scala
object Type5 {
  val a: (Int, Int) = (1, 2);
  a(0, 1)
}